<resources>
    <string name="app_name">BP Tracker</string>

    <!-- TODO: better descriptions -->
    <string name="perm_receive_bpt_events_label">Receive BP Tracker events</string>
    <string name="perm_receive_bpt_events_desc">Receive BP Tracker events</string>

    <string name="perm_receive_device_events_label">Receive particle.io device events</string>
    <string name="perm_receive_device_events_desc">Receive particle.io device events</string>

    <string name="perm_run_device_function_desc">Run arbitrary particle.io device functions</string>
    <string name="perm_run_device_function_label">Run arbitrary particle.io device functions</string>


    <string name="intro_text">Intro text for BP Tracker</string>

    <string name="content_authority">com.bptracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_to_particle">Particle Login</string>

    <string name="forgot_password_uri">https://www.particle.io/forgot-password</string>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="set_up_tracker">Get Started</string>

    <string name="login_failed_msg">Could not login to particle.io: %1$s </string>

    <string name="title_activity_launcher">LauncherActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="your_devices">Your devices</string>


    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="unnamed_device">(Unnamed device)</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_general_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_device_location">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Auto</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
